@@ -13,6 +13,9 @@ wajig (2.0.50) unstable; urgency=low
       the functionality implied by that virtual package, instead of just
       vomiting "package not found!"
     - the trade-off is that the command is a bit slower, but what's the rush :)
+  * LIST-RECOMMENDED: new command that displays packages which are
+    auto-installed via Recommends, and are without installed dependencies.
+    (Closes: #482147)
 
 
  -- Graham Williams <Graham.Williams@togaware.com>  Wed, 16 Sep 2010 17:22:16 +1000
